# Scrum

./: CMakeLists.txt  app.cpp  app.hpp  board_view.cpp  board_view.hpp  developer.cpp  developer.hpp  dialogs.cpp  dialogs.hpp  main.cpp  scrum_board.cpp  scrum_board.hpp  task.cpp  task.hpp  Отчет Курсовая.docx
